feat: add other attention yaml entries

--- a/src/data/status-icons/status-icons.yaml
+++ b/src/data/status-icons/status-icons.yaml
@@ -47,3 +47,100 @@ high:
       Indicates a threshold has been breached. Intended to alert a user before a
       critical event is triggered. Only use in conjunction with ‘Caution.’
     usage: major caution, serious situations, critical instability
+medium:
+  - name: Undefined
+    fileNames:
+      - undefined-filled
+      - undefined-outline
+    token: No token
+    description:
+      Indicates a value that is outside of an acceptable range or formatted
+      incorrectly
+    usage: experimental work, outliers*
+  - name: Checkmark
+    fileNames:
+      - checkmark-circle-green-filled
+      - checkmark-circle-green-outline
+    token: $support-02
+    description:
+      Indicates the clearing of one or more previously reported alarms; implies
+      no issues are present
+    usage: success, completion, stability, active states*
+  - name: Checkmark
+    fileNames:
+      - checkmark
+    token: $support-02
+    description:
+      Carries the same meaning as the contained checkmark but is more often used
+      in data tables and confined spaces
+  - name: Checkmark
+    fileNames:
+      - checkmark-circle-blue-filled
+      - checkmark-circle-blue-outline
+    token: $support-04
+    description:
+      Indicates success at the end of a process; It is usually used as an
+      interactive state within Carbon components, hence the color change
+    usage: success, completion*
+  - name: In progress
+    fileNames:
+      - inprogress
+    token: $support-04
+    description:
+      Indicates a process has started but not finished running. This icon will
+      be replaced by ‘checkmark’ or ‘warning’ icon when the status of the job is
+      changed
+    usage: unfinished or running processes*
+  - name: Incomplete
+    fileNames:
+      - incomplete
+    token: $support-04
+    description:
+      Indicates a job has started but is not yet finished. This appears in
+      Carbon’s Progress Indicator component
+    usage: incomplete tasks*
+  - name: Circle dash
+    fileNames:
+      - circle-dash
+    token: $support-04
+    description:
+      Indicates that a job or step (in Carbon’s progress indicator) has not yet
+      been started
+    usage: upstarted tasks or disabled processes*
+  - name: Pending
+    fileNames:
+      - pending-filled
+      - pending-outline
+    token: $icon-02
+    description:
+      Indicates a job has started but can not be scheduled due to insufficient
+      resources
+    usage: indefinite holds*
+low:
+  - name: Unknown
+    token: $icon-02
+    description: Indicates the status of an object unknown
+    usage: unknown or undefined statuses*
+    fileNames:
+      - unknown-filled
+      - unknown-outline
+  - name: Help
+    token: $icon-02
+    description: Indicates additional support or FAQ content is available
+    usage: help, guidance, exceptions*
+    fileNames:
+      - help-filled
+      - help-outline
+  - name: Information
+    token: $support-04
+    description: Indicates additional (non-essential) information is available
+    usage: additional information, exceptions*
+    fileNames:
+      - information-circle-filled
+      - information-circle-outline
+  - name: Information square
+    token: $support-04
+    description: Carries the same meaning as the ‘information square’ icon
+    fileNames:
+      - information-square-filled
+      - information-square-outline
