feat: add glyph table

--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -144,3 +144,75 @@ low:
     fileNames:
       - information-square-filled
       - information-square-outline
+glyph:
+  - name: Critical
+    token: $support-01
+    description: Indicates a severe event that needs immediate attention
+    usage: critical situations, emergencies urgent alerts*
+    fileNames:
+      - critical
+  - name: Warning
+    token: $support-01
+    description:
+      Indicates an error (often inline) that needs immediate attention or a
+      incorrect use case
+    usage: warnings, errors, failure, deprecation, cancellation*
+    fileNames:
+      - warning
+  - name: Caution
+    token: $support-03
+    description:
+      Indicates a non-service affecting fault condition and that corrective
+      action should be taken to prevent a more serious fault
+    usage: minor caution, prevention, instability*
+    fileNames:
+      - caution
+  - name: Caution inverted
+    token: $support-caution-inverted
+    description:
+      Indicates a breach before a critical event is triggered. Only use in
+      conjunction with ‘Caution small’
+    usage: major caution, serious situations, critical instability*
+    fileNames:
+      - caution-inverted
+  - name: Circle
+    token: $support-02
+    description:
+      Indicates the clearing of one or more previously reported alarms; implies
+      no issues are present
+    usage: success, completion, stability, active states*
+    fileNames:
+      - circle-fill
+  - name: Undefined
+    token: $support-undefined
+    description:
+      Indicates a value that is outside of an acceptable range or formatted
+      incorrectly
+    usage: experimental work, outliers*
+    fileNames:
+      - undefined
+  - name: Square
+    token: $support-04
+    description:
+      Indicates additional information is available; this is the most adaptable
+      symbol indicator and can also be used to address gaps that this table does
+      not address.
+    usage: additional information, wild card*
+    fileNames:
+      - square-fill
+  - name: Incomplete
+    token: $support-04
+    description:
+      Indicates a process has started but not finished running or a user task is
+      unfinished
+    usage: unfinished or running processes*
+    fileNames:
+      - incomplete
+  - name: Circle stroke (Omitted?)
+    token: $support-04
+    description:
+      Indicates that a job or step (in Carbon’s progress indicator) has not yet
+      been started
+    usage: unstarted tasks or disabled processes
+    fileNames:
+      - circle-stroke
