--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -1,8 +1,8 @@
 high:
   - name: Critical
     token: $support-01
-    description: Indicates a severe event that needs immediate attention.
-    usage: critical situations, emergencies urgent alerts
+    description: Indicates a severe event that needs immediate attention;
+    usage: critical situations, emergencies, urgent alerts
     fileNames:
       - critical-filled
       - critical-outline
@@ -12,9 +12,9 @@ high:
       - warning-outline
     token: $support-01
     description:
-      Indicates an error (often inline) that needs immediate attention.
+      Indicates an error (often inline) that needs immediate attention;
     usage: warnings, errors, alerts, failure
-  - name: Warning hex
+  - name: Warning alt
     fileNames:
       - warning-hex-filled
       - warning-hex-outline
@@ -27,86 +27,86 @@ high:
     token: $support-01
     description:
       Indicates unavailability, an incorrect use case (especially in usage
-      guidance) or that a run has been cancelled.
+      guidance) or a run that has been cancelled;
     usage: incorrect usage, unavailability, cancellation
   - name: Caution
     fileNames:
       - caution-filled
       - caution-outline
-    token: $support-03, $support-caution
+    token: $support-03, Yellow 60 (light-theme outline)
     description:
-      Indicates the existence of a non-service affecting fault condition and
-      that corrective action should be taken to prevent a more serious fault.
+      Indicates the existence of a non-service affecting fault condition 
+      requiring corrective action to prevent a more serious fault;
     usage: minor caution, prevention, instability
   - name: Caution inverted
     fileNames:
       - caution-inverted-filled
       - caution-inverted-outline
-    token: $support-caution-inverted
+    token: Orange 50, Orange 40
     description:
-      Indicates a threshold has been breached. Intended to alert a user before a
-      critical event is triggered. Only use in conjunction with ‘Caution.’
+      Indicates a threshold has been breached; alerts a user before a
+      critical event is triggered (only used in conjunction with ‘Caution.’)
     usage: major caution, serious situations, critical instability
 medium:
   - name: Undefined
     fileNames:
       - undefined-filled
       - undefined-outline
-    token: No token
+    token: Purple 60, Purple 50
     description:
       Indicates a value that is outside of an acceptable range or formatted
-      incorrectly
-    usage: experimental work, outliers*
+      incorrectly;
+    usage: experimental work, outliers
   - name: Checkmark
     fileNames:
       - checkmark-circle-green-filled
       - checkmark-circle-green-outline
     token: $support-02
     description:
-      Indicates the clearing of one or more previously reported alarms; implies
-      no issues are present
-    usage: success, completion, stability, active states*
-  - name: Checkmark
+      Indicates stability or the clearing of one or more reported alarms; implies
+      no issues are present;
+    usage: success, completion, stability, active states
+  - name: Checkmark alt
     fileNames:
       - checkmark
     token: $support-02
     description:
       Carries the same meaning as the contained checkmark but is more often used
-      in data tables and confined spaces
+      in data tables and confined spaces;
   - name: Checkmark
     fileNames:
       - checkmark-circle-blue-filled
       - checkmark-circle-blue-outline
     token: $support-04
     description:
-      Indicates success at the end of a process; It is usually used as an
-      interactive state within Carbon components, hence the color change
-    usage: success, completion*
+      Indicates success at the end of a process (usually used as an
+      interactive state within Carbon components, hence the color change);
+    usage: success, completion
   - name: In progress
     fileNames:
       - inprogress
     token: $support-04
     description:
-      Indicates a process has started but not finished running. This icon will
+      Indicates a process has started but has not finished running (icon will
       be replaced by ‘checkmark’ or ‘warning’ icon when the status of the job is
-      changed
-    usage: unfinished or running processes*
+      changed);
+    usage: unfinished, running processes
   - name: Incomplete
     fileNames:
       - incomplete
     token: $support-04
     description:
-      Indicates a job has started but is not yet finished. This appears in
-      Carbon’s Progress Indicator component
-    usage: incomplete tasks*
-  - name: Circle dash
+      Indicates a job has started but is not yet finished (icon appears in
+      Carbon’s Progress Indicator component);
+    usage: incomplete tasks
+  - name: Not started
     fileNames:
       - circle-dash
     token: $support-04
     description:
       Indicates that a job or step (in Carbon’s progress indicator) has not yet
-      been started
-    usage: upstarted tasks or disabled processes*
+      been started;
+    usage: upstarted tasks or disabled processes
   - name: Pending
     fileNames:
       - pending-filled
@@ -114,31 +114,31 @@ medium:
     token: $icon-02
     description:
       Indicates a job has started but can not be scheduled due to insufficient
-      resources
-    usage: indefinite holds*
+      resources;
+    usage: indefinite holds
 low:
   - name: Unknown
     token: $icon-02
-    description: Indicates the status of an object unknown
-    usage: unknown or undefined statuses*
+    description: Indicates that the status of an object is unknown;
+    usage: unknown, undefined status
     fileNames:
       - unknown-filled
       - unknown-outline
   - name: Help
     token: $icon-02
-    description: Indicates additional support or FAQ content is available
-    usage: help, guidance, exceptions*
+    description: Indicates additional support or FAQ content is available;
+    usage: help, guidance, exceptions
     fileNames:
       - help-filled
       - help-outline
   - name: Information
     token: $support-04
-    description: Indicates additional (non-essential) information is available
-    usage: additional information, exceptions*
+    description: Indicates additional (non-essential) information is available;
+    usage: additional information, exceptions
     fileNames:
       - information-circle-filled
       - information-circle-outline
-  - name: Information square
+  - name: Information alt
     token: $support-04
     description: Carries the same meaning as the ‘information square’ icon
     fileNames:
@@ -147,72 +147,68 @@ low:
 glyph:
   - name: Critical
     token: $support-01
-    description: Indicates a severe event that needs immediate attention
-    usage: critical situations, emergencies urgent alerts*
+    description: Indicates a severe event that needs immediate attention;
+    usage: critical situations, emergencies urgent alerts
     fileNames:
       - critical
   - name: Warning
     token: $support-01
     description:
-      Indicates an error (often inline) that needs immediate attention or a
-      incorrect use case
-    usage: warnings, errors, failure, deprecation, cancellation*
+      Indicates an error that needs immediate attention;
+    usage: warnings, errors, failure, deprecation, cancellation
     fileNames:
       - warning
   - name: Caution
-    token: $support-03
+    token: $support-03, Yellow 60 (Light-theme stroke)
     description:
-      Indicates a non-service affecting fault condition and that corrective
-      action should be taken to prevent a more serious fault
-    usage: minor caution, prevention, instability*
+      Indicates a non-service affecting fault condition requiring corrective
+      action to prevent a more serious fault;
+    usage: minor caution, prevention, instability
     fileNames:
       - caution
   - name: Caution inverted
-    token: $support-caution-inverted
+    token: Orange 50, Orange 40
     description:
-      Indicates a breach before a critical event is triggered. Only use in
-      conjunction with ‘Caution small’
-    usage: major caution, serious situations, critical instability*
+      Indicates a breach before a critical event is triggered (only use in
+      conjunction with ‘Caution small’);
+    usage: major caution, serious situations, critical instability
     fileNames:
       - caution-inverted
-  - name: Circle
+  - name: Stable
     token: $support-02
     description:
-      Indicates the clearing of one or more previously reported alarms; implies
+      Indicates stability or the clearing of one or more reported alarms; implies
       no issues are present
-    usage: success, completion, stability, active states*
+    usage: success, completion, stability, active states
     fileNames:
       - circle-fill
   - name: Undefined
     token: $support-undefined
     description:
       Indicates a value that is outside of an acceptable range or formatted
-      incorrectly
-    usage: experimental work, outliers*
+      incorrectly;
+    usage: experimental work, outliers
     fileNames:
       - undefined
-  - name: Square
+  - name: Information
     token: $support-04
     description:
-      Indicates additional information is available; this is the most adaptable
-      symbol indicator and can also be used to address gaps that this table does
-      not address.
-    usage: additional information, wild card*
+      Indicates additional information is available (can be used adaptively if a gap arises);
+    usage: additional information, wild card
     fileNames:
       - square-fill
   - name: Incomplete
     token: $support-04
     description:
       Indicates a process has started but not finished running or a user task is
-      unfinished
-    usage: unfinished or running processes*
+      unfinished;
+    usage: unfinished, running processes
     fileNames:
       - incomplete
-  - name: Circle stroke (Omitted?)
-    token: $support-04
+  - name: Draft
+    token: $icon-02
     description:
-      Indicates that a job or step (in Carbon’s progress indicator) has not yet
-      been started
-    usage: unstarted tasks or disabled processes
+      Indicates that a job has not been started, draft status of a job or a disabled process;
+    usage: unstarted tasks, drafts, disabled processes
     fileNames:
       - circle-stroke
