--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
     "fuse.js": "^6.4.1",
-    "gatsby": "^2.19.8",
-    "gatsby-image": "^2.4.15",
-    "gatsby-theme-carbon": "^1.29.1",
+    "gatsby": "^3.7.2",
+    "gatsby-image": "^3.7.1",
+    "gatsby-theme-carbon": "^2.0.0-next.2",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
@@ -80,7 +80,7 @@
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.2.29",
+    "babel-preset-gatsby": "^1.7.1",
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
@@ -94,14 +94,14 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "fs-extra": "^9.0.1",
-    "gatsby-plugin-lodash": "^3.1.3",
-    "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-lodash": "^4.7.1",
+    "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sharp": "^2.6.27",
-    "gatsby-plugin-sitemap": "^2.2.30",
-    "gatsby-remark-images": "^3.3.33",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-sitemap": "^4.3.1",
+    "gatsby-remark-images": "^5.4.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
     "html-loader": "^0.5.5",
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
