--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "carbon-components-react": "^7.37.0",
     "@carbon/elements": "^10.36.0",
     "@carbon/icons": "^10.33.0",
-    "@carbon/icons-react": "^10.33.0",
-    "gatsby-remark-images": "^3.3.33"
+    "@carbon/icons-react": "^10.33.0"
   },
   "dependencies": {
     "@carbon/charts-react": "0.41.62",
@@ -51,7 +50,7 @@
     "@carbon/icons-react": "^10.33.0",
     "@carbon/pictograms": "^11.11.0",
     "@carbon/pictograms-react": "^11.11.0",
-    "@loadable/component": "^5.12.0",
+    "@loadable/component": "^5.15.0",
     "@slack/web-api": "^5.11.0",
     "carbon-components": "^10.37.0",
     "carbon-components-react": "^7.37.0",
@@ -62,7 +61,7 @@
     "fuse.js": "^6.4.1",
     "gatsby": "^3.7.2",
     "gatsby-image": "^3.7.1",
-    "gatsby-theme-carbon": "^2.0.0-next.2",
+    "gatsby-theme-carbon": "^2.0.0-next.3",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
@@ -74,9 +73,9 @@
     "use-media": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
+    "@babel/core": "^7.14.6",
     "@loadable/babel-plugin": "^5.12.0",
-    "@loadable/webpack-plugin": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.15.0",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
