fix: token names, image assets

--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -29,24 +29,24 @@ high:
       Indicates unavailability, an incorrect use case (especially in usage
       guidance) or that a run has been cancelled.
     usage: incorrect usage, unavailability, cancellation
-  - name: Caution
+  - name: Caution Major
     fileNames:
-      - caution-filled
-      - caution-outline
-    token: $support-03, $support-caution
-    description:
-      Indicates the existence of a non-service affecting fault condition and
-      that corrective action should be taken to prevent a more serious fault.
-    usage: minor caution, prevention, instability
-  - name: Caution inverted
-    fileNames:
-      - caution-inverted-filled
-      - caution-inverted-outline
-    token: $support-caution-inverted
+      - caution-major-filled
+      - caution-major-outline
+    token: $support-caution-major
     description:
       Indicates a threshold has been breached. Intended to alert a user before a
       critical event is triggered. Only use in conjunction with ‘Caution.’
     usage: major caution, serious situations, critical instability
+  - name: Caution minor
+    fileNames:
+      - caution-filled
+      - caution-outline
+    token: $support-caution-minor
+    description:
+      Indicates the existence of a non-service affecting fault condition and
+      that corrective action should be taken to prevent a more serious fault.
+    usage: minor caution, prevention, instability
 medium:
   - name: Undefined
     fileNames:
