--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -35,8 +35,8 @@ high:
       - caution-major-outline
     token: $support-caution-major
     description:
-      Indicates a threshold has been breached. Intended to alert a user before a
-      critical event is triggered. Only use in conjunction with ‘Caution.’
+       Indicates a threshold has been breached; alerts a user before a critical
+      event is triggered (only used in conjunction with ‘Caution.’);
     usage: major caution, serious situations, critical instability
   - name: Caution minor
     fileNames:
@@ -81,7 +81,7 @@ medium:
     token: $support-02
     description:
       Carries the same meaning as the contained checkmark but is more often used
-      in data tables and confined spaces;
+      in data tables and confined spaces
   - name: Checkmark
     fileNames:
       - checkmark-circle-blue-filled
