--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -19,7 +19,7 @@ high:
       - warning-hex-filled
       - warning-hex-outline
     token: $support-01
-    description: Same as above
+    description: Carries the same meaning as 'Warning'
   - name: Misuse
     fileNames:
       - misuse-filled
@@ -36,7 +36,7 @@ high:
     token: $support-caution-major
     description:
        Indicates a threshold has been breached; alerts a user before a critical
-      event is triggered (only used in conjunction with ‘Caution.’);
+      event is triggered (only used in conjunction with ‘Caution’);
     usage: major caution, serious situations, critical instability
   - name: Caution minor
     fileNames:
@@ -71,7 +71,7 @@ medium:
       - checkmark
     token: $support-02
     description:
-      Carries the same meaning as the contained checkmark but is more often used
+      Carries the same meaning as 'Checkmark' but is more often used
       in data tables and confined spaces
   - name: Checkmark
     fileNames:
@@ -140,7 +140,7 @@ low:
       - information-circle-outline
   - name: Information alt
     token: $support-04
-    description: Carries the same meaning as the ‘information square’ icon
+    description: Carries the same meaning as ‘Information’ 
     fileNames:
       - information-square-filled
       - information-square-outline
@@ -165,11 +165,11 @@ glyph:
     usage: minor caution, prevention, instability
     fileNames:
       - caution
-  - name: Caution inverted
+  - name: Major caution
     token: Orange 50, Orange 40
     description:
       Indicates a breach before a critical event is triggered (only use in
-      conjunction with ‘Caution small’);
+      conjunction with ‘Caution’);
     usage: major caution, serious situations, critical instability
     fileNames:
       - caution-inverted
