fix: glyph swap

--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -35,7 +35,7 @@ high:
       - caution-major-outline
     token: $support-caution-major
     description:
-       Indicates a threshold has been breached; alerts a user before a critical
+      Indicates a threshold has been breached; alerts a user before a critical
       event is triggered (only used in conjunction with ‘Caution’);
     usage: major caution, serious situations, critical instability
   - name: Caution minor
@@ -71,8 +71,8 @@ medium:
       - checkmark
     token: $support-02
     description:
-      Carries the same meaning as 'Checkmark' but is more often used
-      in data tables and confined spaces
+      Carries the same meaning as 'Checkmark' but is more often used in data
+      tables and confined spaces
   - name: Checkmark
     fileNames:
       - checkmark-circle-blue-filled
@@ -140,7 +140,7 @@ low:
       - information-circle-outline
   - name: Information alt
     token: $support-04
-    description: Carries the same meaning as ‘Information’ 
+    description: Carries the same meaning as ‘Information’
     fileNames:
       - information-square-filled
       - information-square-outline
@@ -157,7 +157,15 @@ glyph:
     usage: warnings, errors, failure, deprecation, cancellation
     fileNames:
       - warning
-  - name: Caution
+  - name: Caution major
+    token: Orange 50, Orange 40
+    description:
+      Indicates a breach before a critical event is triggered (only use in
+      conjunction with ‘Caution’);
+    usage: major caution, serious situations, critical instability
+    fileNames:
+      - caution-major
+  - name: Caution minor
     token: $support-03, Yellow 60 (Light-theme stroke)
     description:
       Indicates a non-service affecting fault condition requiring corrective
@@ -165,14 +173,6 @@ glyph:
     usage: minor caution, prevention, instability
     fileNames:
       - caution
-  - name: Major caution
-    token: Orange 50, Orange 40
-    description:
-      Indicates a breach before a critical event is triggered (only use in
-      conjunction with ‘Caution’);
-    usage: major caution, serious situations, critical instability
-    fileNames:
-      - caution-inverted
   - name: Stable
     token: $support-02
     description:
