--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
     "@now/node": "^1.6.1",
+    "@percy/agent": "^0.28.6",
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
@@ -97,6 +98,7 @@
     "fs-extra": "^9.0.1",
     "gatsby-plugin-lodash": "^3.1.3",
     "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-percy": "^0.1.4",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-plugin-sitemap": "^2.2.30",
