fix: glyph assets

--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -145,42 +145,44 @@ low:
       - information-square-filled
       - information-square-outline
 glyph:
-  - name: Critical
+  - name: Failure
     token: $support-01
     description: Indicates a severe event that needs immediate attention;
     usage: critical situations, emergencies urgent alerts
     fileNames:
-      - critical
-  - name: Warning
+      - failure
+  - name: Critical severity
+    token: $support-01
+    description: Indicates a severe event that needs immediate attention;
+    usage: critical situations, emergencies urgent alerts
+    fileNames:
+      - critical-severity
+  - name: High severity
+    token: $support-01
+    description: Indicates a severe event that needs immediate attention;
+    usage: critical situations, emergencies urgent alerts
+    fileNames:
+      - high-severity
+  - name: Medium severity
     token: $support-01
     description: Indicates an error that needs immediate attention;
     usage: warnings, errors, failure, deprecation, cancellation
     fileNames:
-      - warning
-  - name: Caution major
-    token: Orange 50, Orange 40
-    description:
-      Indicates a breach before a critical event is triggered (only use in
-      conjunction with ‘Caution’);
-    usage: major caution, serious situations, critical instability
+      - medium-severity
+  - name: Low severity
+    token: $support-01
+    description: Indicates an error that needs immediate attention;
+    usage: warnings, errors, failure, deprecation, cancellation
     fileNames:
-      - caution-major
-  - name: Caution minor
+      - low-severity
+  - name: Caution
     token: $support-03, Yellow 60 (Light-theme stroke)
     description:
       Indicates a non-service affecting fault condition requiring corrective
       action to prevent a more serious fault;
-    usage: minor caution, prevention, instability
+    usage: caution, prevention, instability
     fileNames:
       - caution
-  - name: Stable
-    token: $support-02
-    description:
-      Indicates stability or the clearing of one or more reported alarms;
-      implies no issues are present
-    usage: success, completion, stability, active states
-    fileNames:
-      - circle-fill
   - name: Undefined
     token: $support-undefined
     description:
@@ -189,6 +191,22 @@ glyph:
     usage: experimental work, outliers
     fileNames:
       - undefined
+  - name: Stable
+    token: $support-02
+    description:
+      Indicates stability or the clearing of one or more reported alarms;
+      implies no issues are present
+    usage: success, completion, stability, active states
+    fileNames:
+      - circle-fill
+  - name: New
+    token: $support-02
+    description:
+      Indicates stability or the clearing of one or more reported alarms;
+      implies no issues are present
+    usage: success, completion, stability, active states
+    fileNames:
+      - new
   - name: Information
     token: $support-04
     description:
