--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -19,7 +19,7 @@ high:
       - warning-hex-filled
       - warning-hex-outline
     token: $support-01
-    description: Carries the same meaning as 'Warning'
+    description: Carries the same meaning as ‘Warning’
   - name: Misuse
     fileNames:
       - misuse-filled
@@ -33,7 +33,7 @@ high:
     fileNames:
       - caution-major-filled
       - caution-major-outline
-    token: $support-caution-major
+    token: Orange 40/Orange 60 outline, Orange 40
     description:
       Indicates a threshold has been breached; alerts a user before a critical
       event is triggered (only used in conjunction with ‘Caution’);
@@ -42,7 +42,7 @@ high:
     fileNames:
       - caution-filled
       - caution-outline
-    token: $support-03, Yellow 60 (light-theme outline)
+    token: $support-03/Yellow 60 outline, $support-03
     description:
       Indicates the existence of a non-service affecting fault condition
       requiring corrective action to prevent a more serious fault;
@@ -57,7 +57,7 @@ medium:
       Indicates a value that is outside of an acceptable range or formatted
       incorrectly;
     usage: experimental work, outliers
-  - name: Checkmark
+  - name: Normal
     fileNames:
       - checkmark-circle-green-filled
       - checkmark-circle-green-outline
@@ -66,14 +66,14 @@ medium:
       Indicates stability or the clearing of one or more reported alarms;
       implies no issues are present;
     usage: success, completion, stability, active states
-  - name: Checkmark alt
+  - name: Normal alt
     fileNames:
       - checkmark
     token: $support-02
     description:
-      Carries the same meaning as 'Checkmark' but is more often used in data
+      Carries the same meaning as ‘Normal’ but is more often used in data
       tables and confined spaces
-  - name: Checkmark
+  - name: Success
     fileNames:
       - checkmark-circle-blue-filled
       - checkmark-circle-blue-outline
@@ -111,21 +111,21 @@ medium:
     fileNames:
       - pending-filled
       - pending-outline
-    token: $icon-02
+    token: Gray 60, Gray 50
     description:
       Indicates a job has started but can not be scheduled due to insufficient
       resources;
     usage: indefinite holds
 low:
   - name: Unknown
-    token: $icon-02
+    token: Gray 60, Gray 50
     description: Indicates that the status of an object is unknown;
     usage: unknown, undefined status
     fileNames:
       - unknown-filled
       - unknown-outline
   - name: Help
-    token: $icon-02
+    token: Gray 60, Gray 50
     description: Indicates additional support or FAQ content is available;
     usage: help, guidance, exceptions
     fileNames:
