--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -1,8 +1,8 @@
 high:
-  - name: Critical
+  - name: Failure
     token: $support-01
     description: Indicates a severe event that needs immediate attention;
-    usage: critical situations, emergencies, urgent alerts
+    usage: failed processes, emergencies, urgent alerts
     fileNames:
       - critical-filled
       - critical-outline
@@ -147,44 +147,43 @@ low:
 glyph:
   - name: Failure
     token: $support-01
-    description: Indicates a severe event that needs immediate attention;
-    usage: critical situations, emergencies urgent alerts
+    description: Indicates a severe process failure or error that needs immediate attention;
+    usage: critical failures, emergencies urgent alerts, deprecation and cancellation
     fileNames:
       - failure
   - name: Critical severity
     token: $support-01
-    description: Indicates a severe event that needs immediate attention;
-    usage: critical situations, emergencies urgent alerts
+    description: Indicates critical severity threat, critical severity object (like an IP), or critical  risk of a data breach; based on a 1–10 scale;
+    usage: critical (10) threat, critical risk, critical severity warnings
     fileNames:
       - critical-severity
   - name: High severity
     token: $support-01
-    description: Indicates a severe event that needs immediate attention;
-    usage: critical situations, emergencies urgent alerts
+    description: Indicates high severity threat, high severity object (like an IP), or high risk of a data breach; based on a 1–10 scale;
+    usage: high threat (7–9), high risk, high severity warnings
     fileNames:
       - high-severity
   - name: Medium severity
-    token: $support-01
-    description: Indicates an error that needs immediate attention;
-    usage: warnings, errors, failure, deprecation, cancellation
+    token: Orange 40/Orange 60 stroke, Orange 40
+    description: Indicates medium severity threat, medium severity object (like an IP), or medium risk of a data breach; based on a 1–10 scale;
+    usage: medium threat (4–6), medium risk, medium severity warnings
     fileNames:
       - medium-severity
   - name: Low severity
-    token: $support-01
-    description: Indicates an error that needs immediate attention;
-    usage: warnings, errors, failure, deprecation, cancellation
+    token: $support-03/Yellow 60 stroke, $support-03
+    description: Indicates low severity threat, low severity object (like an IP), or low risk of a data breach; based on a 1–10 scale;
+    usage: low threat (0–3), low risk, low severity warnings
     fileNames:
       - low-severity
   - name: Caution
-    token: $support-03, Yellow 60 (Light-theme stroke)
+    token: $support-03/Yellow 60 stroke, $support-03
     description:
-      Indicates a non-service affecting fault condition requiring corrective
-      action to prevent a more serious fault;
-    usage: caution, prevention, instability
+      When not using the Security risk/severity scale, this can be used to indicate  the existence of a non-service affecting fault condition;
+    usage: minor caution, prevention, instability
     fileNames:
       - caution
   - name: Undefined
-    token: $support-undefined
+    token: Purple 60, Purple 50
     description:
       Indicates a value that is outside of an acceptable range or formatted
       incorrectly;
@@ -195,23 +194,21 @@ glyph:
     token: $support-02
     description:
       Indicates stability or the clearing of one or more reported alarms;
-      implies no issues are present
+      implies no issues are present;
     usage: success, completion, stability, active states
     fileNames:
       - circle-fill
   - name: New
-    token: $support-02
+    token: $support-04
     description:
-      Indicates stability or the clearing of one or more reported alarms;
-      implies no issues are present
-    usage: success, completion, stability, active states
+      Indicates a new components, features or pieces of content;
+    usage: new items, additional information
     fileNames:
       - new
   - name: Information
     token: $support-04
     description:
-      Indicates additional information is available (can be used adaptively if a
-      gap arises);
+      Indicates additional information is available (can be used adaptively for statuses not taken into account by this table);
     usage: additional information, wild card
     fileNames:
       - square-fill
@@ -224,7 +221,7 @@ glyph:
     fileNames:
       - incomplete
   - name: Draft
-    token: $icon-02
+    token: Gray 60, Gray 50
     description:
       Indicates that a job has not been started, draft status of a job or a
       disabled process;
