Add design to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,7 @@
-# Default to the system team
-* @carbon-design-system/developers-system
+# Default to system one design and one dev
+* @carbon-design-system/developers-system @carbon-design-system/design
 
 *.conf @vpicone
-
-# If updating content (mdx) opt for systems team
-*.mdx @carbon-design-system/developers-system @carbon-design-system/content
 
 # Vikki Paterson is code owner for Experimental IDE patterns
 src/pages/community/patterns/create-flows/* @vikkipaterson
