docs(migration): migration guide v11 beta

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -30,6 +30,10 @@
       path: /whats-happening/meetups/
     - title: Work in progress
       path: /whats-happening/work-in-progress/
+- title: Migration
+  pages:
+    - title: Migration v11
+      path: /migration/migration-v11/
   hasDivider: true
 - title: Designing
   pages:
