feat: update ia

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -20,20 +20,20 @@
       path: /case-studies/ibm-commerce-platform
 - title: What’s happening
   pages:
-    - title: Releases
-      path: /whats-happening/releases/
-    - title: The v11 release
-      path: /whats-happening/v11-release/
     - title: News and articles
       path: /whats-happening/news-and-articles/
     - title: Meetups
       path: /whats-happening/meetups/
     - title: Work in progress
       path: /whats-happening/work-in-progress/
-- title: Migration
+- title: Releases
   pages:
-    - title: Migration v11
-      path: /migration/migration-v11/
+    - title: Overview
+      path: /releases/overview/
+    - title: v10
+      path: /releases/v10/overview
+    - title: v11
+      path: /releases/v11/overview
   hasDivider: true
 - title: Designing
   pages:
