feat(migration-docs): made some

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -10,6 +10,8 @@
       path: /all-about-carbon/the-team/
     - title: Partners
       path: /all-about-carbon/partners/
+    - title: Releases
+      path: /all-about-carbon/releases/
 - title: Case studies
   pages:
     - title: Overview
@@ -73,6 +75,14 @@
       path: /contributing/contribute-pictograms/
     - title: Add ons
       path: /contributing/add-ons/
+- title: Migrating
+  pages:
+    - title: Overview
+      path: /migrating/overview/
+    - title: Design
+      path: /migrating/design/
+    - title: Develop
+      path: /migrating/develop/
   hasDivider: true
 - title: Guidelines
   pages:
@@ -238,7 +248,5 @@
       path: /help/faq/
     - title: Certificate of Originality
       path: /help/certificate-of-originality/
-    - title: Migration guide
-      path: /help/migration-guide/overview/
     - title: Contact us
       path: /help/contact-us/
