--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -77,12 +77,10 @@
       path: /contributing/add-ons/
 - title: Migrating
   pages:
-    - title: Overview
-      path: /migrating/overview/
-    - title: Design
-      path: /migrating/design/
-    - title: Develop
-      path: /migrating/develop/
+    - title: Guide
+      path: /migrating/guide/overview/
+    - title: Benefits
+      path: /migrating/benefits
   hasDivider: true
 - title: Guidelines
   pages:
