--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -22,8 +22,6 @@
       path: /case-studies/ibm-commerce-platform
 - title: What’s happening
   pages:
-    - title: The v11 release
-      path: /whats-happening/v11-release/
     - title: News and articles
       path: /whats-happening/news-and-articles/
     - title: Meetups
@@ -75,10 +73,10 @@
       path: /contributing/add-ons/
 - title: Migrating
   pages:
-    - title: Guide
-      path: /migrating/guide/overview/
-    - title: Benefits
-      path: /migrating/benefits
+    - title: v10
+      path: /migrating/v10/overview/
+    - title: v11
+      path: /migrating/v11/overview/
   hasDivider: true
 - title: Guidelines
   pages:
