Revert "fix: clean up redundant docs"
This reverts commit 350e395c3003adb234958582a53e883b90382b66.

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -22,6 +22,8 @@
       path: /case-studies/ibm-commerce-platform
 - title: What’s happening
   pages:
+    - title: The v11 release
+      path: /whats-happening/v11-release/
     - title: News and articles
       path: /whats-happening/news-and-articles/
     - title: Meetups
@@ -73,10 +75,10 @@
       path: /contributing/add-ons/
 - title: Migrating
   pages:
-    - title: v10
-      path: /migrating/v10/overview/
-    - title: v11
-      path: /migrating/v11/overview/
+    - title: Guide
+      path: /migrating/guide/overview/
+    - title: Benefits
+      path: /migrating/benefits
   hasDivider: true
 - title: Guidelines
   pages:
