fix(migration-docs): tightened up overview

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -77,6 +77,8 @@
   pages:
     - title: Guide
       path: /migrating/guide/overview/
+    - title: FAQs
+      path: /migrating/faq/
   hasDivider: true
 - title: Guidelines
   pages:
