feat(migration-docs): for beta (#2463)
* feat(migration-docs): made some

* fix(migration-docs): nav was all messed up

* fix(migraton): broken images

* feat(migration-docs): added sass modules

* feat(migration-docs): benefits page rough draft

* feat(migration-docs): draft

* feat(docs): added docs for theming and layering

* fix: clean up redundant docs

* Revert "fix: clean up redundant docs"

This reverts commit 350e395c3003adb234958582a53e883b90382b66.

* fix: clean up docs

* fix: address josh comments

* feat: add colors section

* fix: update components migration and add resources

* feat: add some info to sass modules section

* fix(migration-docs): josh edits

* fix(migration-docs): updated design

* fix(migration-docs): updated homepage link and add nav to develop

* fix: color table md link

* fix(migration-docs): removed migration from help section

* fix: fine tune content and feedback

* fix: more fine tuning

* fix: update anchor links

* docs(theming): added tags and updated theming section

* fix(migration-docs): tightened up overview

* fix(migration-docs): page description on design page

* feat: add grid migration

* fix: table links and anchor links to work w tags

* fix: anchor links

* fix: grid resource card

* fix: resource card comment

* fix: some grid wording

* fix: more wording

* fix: overview dev resource card and apostrophes

* fix(migration-docs): card fix

* fix: link to 'migration guide' to match left nav

* fix(migration-docs): whats new link

* fix: typo existing tokens

* fix: overview develop get started link

* fix(migration-docs): icons, design, table fixes

* fix(migration-docs): notification on news page

Co-authored-by: Andrea N. Cardona <andrea.cardona@ibm.com>
Co-authored-by: Josefina Mancilla <josefinanoemi4@gmail.com>
Co-authored-by: johnbister <70543333+johnbister@users.noreply.github.com>

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -10,6 +10,8 @@
       path: /all-about-carbon/the-team/
     - title: Partners
       path: /all-about-carbon/partners/
+    - title: Releases
+      path: /all-about-carbon/releases/
 - title: Case studies
   pages:
     - title: Overview
@@ -20,8 +22,6 @@
       path: /case-studies/ibm-commerce-platform
 - title: What’s happening
   pages:
-    - title: Releases
-      path: /whats-happening/releases/
     - title: The v11 release
       path: /whats-happening/v11-release/
     - title: News and articles
@@ -73,6 +73,12 @@
       path: /contributing/contribute-pictograms/
     - title: Add ons
       path: /contributing/add-ons/
+- title: Migrating
+  pages:
+    - title: Guide
+      path: /migrating/guide/overview/
+    - title: FAQs
+      path: /migrating/faq/
   hasDivider: true
 - title: Guidelines
   pages:
@@ -238,7 +244,5 @@
       path: /help/faq/
     - title: Certificate of Originality
       path: /help/certificate-of-originality/
-    - title: Migration guide
-      path: /help/migration-guide/overview/
     - title: Contact us
       path: /help/contact-us/
