--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -146,6 +146,8 @@
       path: /components/overflow-menu/usage/
     - title: Pagination
       path: /components/pagination/usage/
+    - title: Popover
+      path: /components/popover/usage/
     - title: Progress indicator
       path: /components/progress-indicator/usage/
     - title: Radio button
