--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@loadable/webpack-plugin": "^5.12.0",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
+    "axios": "0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
     "d3": "^5.12.0",
@@ -107,7 +108,6 @@
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
     "markdown-loader": "^5.0.0",
-    "node-fetch": "^3.0.0-beta.9",
     "prettier": "^2.0.2",
     "prismjs": "^1.17.1",
     "react-ga": "^2.6.0",
