chore(project): update carbon to v10.41.0

--- a/package.json
+++ b/package.json
@@ -37,24 +37,24 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.41.0-rc.0",
-    "carbon-components-react": "^7.41.0-rc.0",
-    "@carbon/elements": "^10.40.0-rc.0",
-    "@carbon/icons": "^10.37.0-rc.0",
-    "@carbon/icons-react": "^10.37.0-rc.0",
+    "carbon-components": "^10.41.0",
+    "carbon-components-react": "^7.41.0",
+    "@carbon/elements": "^10.40.0",
+    "@carbon/icons": "^10.37.0",
+    "@carbon/icons-react": "^10.37.0",
     "gatsby-remark-images": "^3.3.33"
   },
   "dependencies": {
     "@carbon/charts-react": "0.41.92",
-    "@carbon/elements": "^10.40.0-rc.0",
-    "@carbon/icons": "^10.37.0-rc.0",
-    "@carbon/icons-react": "^10.37.0-rc.0",
-    "@carbon/pictograms": "^11.15.0-rc.0",
-    "@carbon/pictograms-react": "^11.15.0-rc.0",
+    "@carbon/elements": "^10.40.0",
+    "@carbon/icons": "^10.37.0",
+    "@carbon/icons-react": "^10.37.0",
+    "@carbon/pictograms": "^11.15.0",
+    "@carbon/pictograms-react": "^11.15.0",
     "@loadable/component": "^5.12.0",
     "@slack/web-api": "^5.11.0",
-    "carbon-components": "^10.41.0-rc.0",
-    "carbon-components-react": "^7.41.0-rc.0",
+    "carbon-components": "^10.41.0",
+    "carbon-components-react": "^7.41.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
