docs: add progress-bar component

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -140,6 +140,8 @@
       path: /components/overflow-menu/usage/
     - title: Pagination
       path: /components/pagination/usage/
+    - title: Progress bar
+      path: /components/progress-bar/usage/
     - title: Progress indicator
       path: /components/progress-indicator/usage/
     - title: Radio button
