--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "fuse.js": "^6.4.1",
     "gatsby": "^3.7.2",
     "gatsby-image": "^3.7.1",
+    "gatsby-plugin-image": "^1.12.0",
     "gatsby-theme-carbon": "^2.0.0-next.3",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
@@ -106,7 +107,7 @@
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
     "markdown-loader": "^5.0.0",
-    "node-fetch": "^3.0.0-beta.9",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.0.2",
     "prismjs": "^1.17.1",
     "use-resize-observer": "^4.0.0"
