[Don't merge yet] feat: update to gtc v2 and gatsby v3 (#2416)
* chore: update deps

* fix: gatsby v3 migration woes

* chore: fix shadowing issues

* chore: update charts to use gatsby-image

Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>

--- a/src/data/status-indicators/status-indicators.yaml
+++ b/src/data/status-indicators/status-indicators.yaml
@@ -71,8 +71,8 @@ medium:
       - checkmark
     token: $support-02
     description:
-      Carries the same meaning as ‘Normal’ but is more often used in data
-      tables and confined spaces
+      Carries the same meaning as ‘Normal’ but is more often used in data tables
+      and confined spaces
   - name: Success
     fileNames:
       - checkmark-circle-blue-filled
@@ -96,8 +96,8 @@ medium:
       - incomplete
     token: $support-04
     description:
-      Indicates a stepped process has begun but is not yet finished (icon appears in
-      Carbon’s Progress Indicator component)
+      Indicates a stepped process has begun but is not yet finished (icon
+      appears in Carbon’s Progress Indicator component)
     usage: incomplete tasks
   - name: Not started
     fileNames:
@@ -147,38 +147,49 @@ low:
 glyph:
   - name: Failure
     token: $support-01
-    description: Indicates a severe process failure or error that needs immediate attention
-    usage: critical failures, emergencies urgent alerts, deprecation and cancellation
+    description:
+      Indicates a severe process failure or error that needs immediate attention
+    usage:
+      critical failures, emergencies urgent alerts, deprecation and cancellation
     fileNames:
       - failure
   - name: Critical severity
     token: $support-01
-    description: Indicates critical severity threat, critical severity object (like an IP), or critical  risk of a data breach; based on a 1–10 scale
+    description:
+      Indicates critical severity threat, critical severity object (like an IP),
+      or critical  risk of a data breach; based on a 1–10 scale
     usage: critical (10) threat, critical risk, critical severity warnings
     fileNames:
       - critical-severity
   - name: High severity
     token: $support-01
-    description: Indicates high severity threat, high severity object (like an IP), or high risk of a data breach; based on a 1–10 scale
+    description:
+      Indicates high severity threat, high severity object (like an IP), or high
+      risk of a data breach; based on a 1–10 scale
     usage: high threat (7–9), high risk, high severity warnings
     fileNames:
       - high-severity
   - name: Medium severity
     token: Orange 40/Orange 60 stroke, Orange 40
-    description: Indicates medium severity threat, medium severity object (like an IP), or medium risk of a data breach; based on a 1–10 scale
+    description:
+      Indicates medium severity threat, medium severity object (like an IP), or
+      medium risk of a data breach; based on a 1–10 scale
     usage: medium threat (4–6), medium risk, medium severity warnings
     fileNames:
       - medium-severity
   - name: Low severity
     token: $support-03/Yellow 60 stroke, $support-03
-    description: Indicates low severity threat, low severity object (like an IP), or low risk of a data breach; based on a 1–10 scale
+    description:
+      Indicates low severity threat, low severity object (like an IP), or low
+      risk of a data breach; based on a 1–10 scale
     usage: low threat (0–3), low risk, low severity warnings
     fileNames:
       - low-severity
   - name: Caution
     token: $support-03/Yellow 60 stroke, $support-03
     description:
-      When not using the Security risk/severity scale, this can be used to indicate  the existence of a non-service affecting fault condition
+      When not using the Security risk/severity scale, this can be used to
+      indicate  the existence of a non-service affecting fault condition
     usage: minor caution, prevention, instability
     fileNames:
       - caution
@@ -200,15 +211,15 @@ glyph:
       - circle-fill
   - name: New
     token: $support-04
-    description:
-      Indicates a new components, features or pieces of content
+    description: Indicates a new components, features or pieces of content
     usage: new items, additional information
     fileNames:
       - new
   - name: Information
     token: $support-04
     description:
-      Indicates additional information is available (can be used adaptively for statuses not taken into account by this table)
+      Indicates additional information is available (can be used adaptively for
+      statuses not taken into account by this table)
     usage: additional information, wild card
     fileNames:
       - square-fill
