chore: fix node engine syntax

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "update-browserslist": "npx browserslist-ga"
   },
   "engines": {
-    "node": ">=14"
+    "node": "14.x"
   },
   "browserslist": [
     "last 1 edge version",
