--- a/package.json
+++ b/package.json
@@ -45,15 +45,15 @@
   },
   "dependencies": {
     "@carbon/charts-react": "0.42.1",
+    "@carbon/elements": "^10.41.0",
+    "@carbon/icons": "^10.38.0",
+    "@carbon/icons-react": "^10.38.0",
     "@carbon/pictograms": "^11.16.0",
     "@carbon/pictograms-react": "^11.16.0",
     "@loadable/component": "^5.15.0",
     "@slack/web-api": "^5.11.0",
     "carbon-components": "^10.42.0",
     "carbon-components-react": "^7.42.0",
-    "@carbon/elements": "^10.41.0",
-    "@carbon/icons": "^10.38.0",
-    "@carbon/icons-react": "^10.38.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
@@ -84,16 +84,8 @@
     "babel-preset-gatsby": "^1.7.1",
     "d3": "7.0.0",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-config-wesbos": "0.0.19",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint": "^7.32.0",
+    "eslint-config-carbon": "^2.8.0",
     "fs-extra": "^9.0.1",
     "gatsby-plugin-lodash": "^4.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
