fix: adjust to new eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "globals": {
     "fathom": "readonly"
   },
+  "root": true,
   "rules": {
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
