chore: migrate to Carbon eslint configuration (#2510)

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
-  "extends": ["wesbos"],
+  "extends": ["carbon"],
   "globals": {
     "fathom": "readonly"
   },
+  "root": true,
   "rules": {
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
