chore: remove browserlist command

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "build:analyze": "yarn install --force && yarn clean && ANALYZE=true yarn build",
     "serve": "gatsby serve",
     "lint:js": "eslint . --fix",
-    "format": "prettier --write 'src/**/*.{css,scss,json,html,yaml,md,mdx}'",
-    "update-browserslist": "npx browserslist-ga"
+    "format": "prettier --write 'src/**/*.{css,scss,json,html,yaml,md,mdx}'"
   },
   "engines": {
     "node": "14.x"
