chore: bump node memory limit

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "gatsby develop -H 0.0.0.0",
     "dev:clean": "gatsby clean && yarn dev",
     "clean": "gatsby clean",
-    "build": "gatsby build",
+    "build": "node --max-old-space-size=8192 ./node_modules/.bin/gatsby build",
     "build:clean": "gatsby clean && yarn build",
     "build:analyze": "yarn install --force && yarn clean && ANALYZE=true yarn build",
     "serve": "gatsby serve",
