--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "gatsby": "^3.7.2",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-image": "^1.12.0",
-    "gatsby-theme-carbon": "^2.0.0-next.3",
+    "gatsby-theme-carbon": "^2.1.2",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
