--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "build:analyze": "yarn install --force && yarn clean && ANALYZE=true yarn build",
     "serve": "gatsby serve",
     "lint:js": "eslint . --fix",
-    "format": "prettier --write 'src/**/*.{css,scss,json,html,yaml,md,mdx}'",
-    "update-browserslist": "npx browserslist-ga"
+    "format": "prettier --write 'src/**/*.{css,scss,json,html,yaml,md,mdx}'"
   },
   "engines": {
     "node": "14.x"
@@ -36,24 +35,18 @@
     "/.cache/*",
     "/node_modules/*"
   ],
-  "resolutions": {
-    "carbon-components": "^10.45.0-rc.0",
-    "carbon-components-react": "^7.45.0-rc.0",
-    "@carbon/elements": "^10.44.0-rc.0",
-    "@carbon/icons": "^10.39.0",
-    "@carbon/icons-react": "^10.39.0"
-  },
+  "resolutions": {},
   "dependencies": {
-    "@carbon/charts-react": "0.50.5",
-    "@carbon/elements": "^10.44.0-rc.0",
+    "@carbon/charts-react": "0.50.7",
+    "@carbon/elements": "^10.44.0",
     "@carbon/icons": "^10.39.0",
     "@carbon/icons-react": "^10.39.0",
     "@carbon/pictograms": "^11.18.0",
     "@carbon/pictograms-react": "^11.18.0",
     "@loadable/component": "^5.15.0",
     "@slack/web-api": "^5.11.0",
-    "carbon-components": "^10.45.0-rc.0",
-    "carbon-components-react": "^7.45.0-rc.0",
+    "carbon-components": "^10.45.0",
+    "carbon-components-react": "^7.45.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
@@ -62,7 +55,7 @@
     "gatsby": "^3.7.2",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-image": "^1.12.0",
-    "gatsby-theme-carbon": "^2.0.0-next.3",
+    "gatsby-theme-carbon": "^2.1.3",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
