--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "/.cache/*",
     "/node_modules/*"
   ],
-  "resolutions": {},
   "dependencies": {
+    "@babel/core": "^7.15.8",
     "@carbon/charts-react": "0.50.8",
     "@carbon/elements": "^10.45.0",
     "@carbon/icons": "^10.41.0",
@@ -46,6 +46,8 @@
     "@carbon/pictograms-react": "^11.19.0",
     "@loadable/component": "^5.15.0",
     "@slack/web-api": "^5.11.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-gatsby": "^1.14.0",
     "carbon-components": "^10.46.0",
     "carbon-components-react": "^7.46.0",
     "change-case": "^4.1.1",
@@ -53,10 +55,10 @@
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
     "fuse.js": "^6.4.1",
-    "gatsby": "^3.14.2",
+    "gatsby": "^3.14.3",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-image": "^1.14.1",
-    "gatsby-theme-carbon": "^2.1.3",
+    "gatsby-theme-carbon": "^2.1.4-next.0",
     "lodash-es": "^4.17.15",
     "markdown-it": "^9.0.1",
     "nanoid": "^2.1.11",
@@ -66,16 +68,16 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^17.0.2",
     "react-live": "^2.2.1",
-    "use-media": "^1.4.0"
+    "use-media": "^1.4.0",
+    "webpack": "^5.59.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/webpack-plugin": "^5.15.0",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^1.14.0",
+    "core-js": "^3.18.3",
     "d3": "7.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
